<resources>
    <string name="app_name">Cooperative Expenses</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="first_access">Primeiro acesso?</string>
    <string name="first_access_click_here">Clique Aqui</string>
    <string name="login_image_no_action">Generic Image</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="expanse_name">Gastos com Gasolina</string>
    <string name="expanse_target">Meta = R$300,00</string>
    <string name="expense_last_update">Last Update</string>
    <string name="expanse_percentual">55%</string>
    <string name="expanse_last_update_date">DD/MM/AAAA</string>
    <string name="add_new_expense_in_this_group">Add New Expense in this Group</string>
    <string name="expense_date">Dia do gasto:</string>
    <string name="more_details">More Details:</string>
    <string name="txt_generic">Generic Text</string>
    <string name="edt_generic">Generic Text</string>
</resources>