<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="expense"
            type="personal.udacity.damc.com.cooperativeexpenses.expenses.model.Expense" />

        <variable
            name="group_target"
            type="String" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="5dp"
            app:cardCornerRadius="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="10dp"
                android:paddingTop="10dp"
                android:paddingEnd="10dp"
                android:paddingBottom="10dp">

                <TextView
                    android:id="@+id/txt_item_expanse_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@{expense.name}"
                    android:textSize="12sp"
                    android:fontFamily="@font/roboto"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="@string/expanse_name" />

                <TextView
                    android:textSize="12sp"
                    android:fontFamily="@font/roboto"
                    android:id="@+id/txt_item_expanse_target"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:displayValueByExpense="@{expense.value}"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintStart_toEndOf="@+id/txt_item_expanse_name"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="Valor = R$50,00" />

                <TextView
                    android:textSize="12sp"
                    android:fontFamily="@font/roboto"
                    android:id="@+id/textView5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintStart_toEndOf="@+id/txt_item_expanse_date"
                    app:layout_constraintTop_toBottomOf="@+id/txt_item_expanse_target"
                    app:valueOfExpense="@{expense.value}"
                    app:valueOfTarget="@{group_target}"
                    tools:text="10% da Meta" />

                <TextView
                    android:textSize="12sp"
                    android:fontFamily="@font/roboto"
                    android:id="@+id/txt_item_expanse_updatestring"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/expense_date"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/txt_item_expanse_name" />

                <TextView
                    android:textSize="12sp"
                    android:fontFamily="@font/roboto"
                    android:id="@+id/txt_item_expanse_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    tools:text="@string/expanse_last_update_date"
                    android:text="@{expense.date}"
                    app:layout_constraintStart_toEndOf="@+id/txt_item_expanse_updatestring"
                    app:layout_constraintTop_toBottomOf="@+id/txt_item_expanse_name" />

                <TextView
                    android:textSize="12sp"
                    android:fontFamily="@font/roboto"
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="Adicionado por DOUG"
                    app:displayUserName="@{expense.user}"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/txt_item_expanse_updatestring" />

                <TextView
                    android:textSize="12sp"
                    android:fontFamily="@font/roboto"
                    android:id="@+id/textView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/more_details"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView3" />

                <TextView
                    android:textSize="12sp"
                    android:fontFamily="@font/roboto"
                    android:id="@+id/editTextTextMultiLine"
                    android:text="@{expense.explanation}"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:ems="10"
                    android:gravity="start|top"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toEndOf="@+id/textView4"
                    app:layout_constraintTop_toBottomOf="@+id/textView3"
                    app:layout_constraintVertical_bias="0.0" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>